# huffman

./: .gitignore  CMakeLists.txt  bitset.cpp  bitset.hpp  encoder.cpp  encoder.hpp  huffman.cpp  main.cpp  testing.hpp  util.cpp  util.hpp  vector.hpp  vector_old.hpp
